# lkr-planner

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  EXPLAINER.md  README.md  REVIEW.md  biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.playwright.config.ts
src/: App.tsx  (+5 more)
src-tauri/: Cargo.toml  build.walkthrough.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib.walkthrough.md  main.rs  main.walkthrough.md  secret_manager.rs
src-tauri/src/integrations/: calendar.rs  daylite.rs  health.rs  health.walkthrough.md  holidays.rs  http_record_replay.rs  http_record_replay.walkthrough.md  local_store.rs  local_store.walkthrough.md  mod.rs  mod.walkthrough.md  zep.rs
src-tauri/src/integrations/calendar/: caldav.rs  commands.rs  events.rs  ical.rs  mod.rs  slots.rs  types.rs
src-tauri/src/integrations/calendar/caldav/: mod.rs  report.rs  write.rs
src-tauri/src/integrations/calendar/events/: absences.rs  classify.rs  mod.rs  order.rs  resolve.rs
src-tauri/src/integrations/daylite/: auth.rs  auth.walkthrough.md  auth_flow.rs  auth_flow.walkthrough.md  client.rs  client.walkthrough.md  contacts.rs  contacts.walkthrough.md  mod.rs  mod.walkthrough.md  projects.rs  projects.walkthrough.md  recording_harness.rs  recording_harness.walkthrough.md  shared.rs  shared.walkthrough.md  test_support.rs
src-tauri/src/integrations/local_store/: mod.rs  persistence.rs  types.rs
src-tauri/src/integrations/planradar/: auth.rs  client.rs  mod.rs  projects.rs  recording_harness.rs  shared.rs
src-tauri/src/integrations/zep/: caldav.rs  commands.rs  credentials.rs  mod.rs  settings.rs  types.rs
src-tauri/src/integrations/zep_vcr/: propfind_typical_multi_employee.xml  propfind_umlaut_and_entity_names.xml
(+357 files in other folders)
